--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.3.12",
+    "@chakra-ui/react": "^1.4.2",
+    "@emotion/react": "^11.1.5",
+    "@emotion/styled": "^11.1.5",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.4",
@@ -13,6 +16,7 @@
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.2",
     "formik": "^2.2.6",
+    "framer-motion": "^4.1.2",
     "graphql": "^15.5.0",
     "next": "^10.0.9",
     "next-apollo": "^5.0.4",
